# quickxorhash-cli

./: Cargo.toml
src/: main.rs
